@@ -1,0 +1,33 @@
+/*******************************************************************************
+ * Copyright (c) 2024 Obeo.
+ * This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v2.0
+ * which accompanies this distribution, and is available at
+ * https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
+ *
+ * Contributors:
+ *     Obeo - initial API and implementation
+ *******************************************************************************/
+package org.eclipse.sirius.components.core.services;
+
+import java.util.List;
+
+import org.eclipse.sirius.components.core.CoreImageConstants;
+import org.eclipse.sirius.components.core.api.IImagePathService;
+import org.springframework.stereotype.Service;
+
+/**
+ * An IImagePathService for the default images.
+ * @author fbarbin
+ */
+@Service
+public class CoreImagePathService implements IImagePathService {
+
+    @Override
+    public List<String> getPaths() {
+        return List.of(CoreImageConstants.IMAGES_ROOT_FOLDER);
+    }
+
+}
